show lot boundaries when clicked

--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Time Travel</title>
+    <title>Show Lots</title>
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
     <div class="centered">
         <div id="streetview">
             <div id="time-travel-container">
-                <label id='time-travel-label'>Time Travel
+                <label id='time-travel-label'>Show Lots
                     <select id="time-travel-select" onchange="window.sv.setPano(this.value)"></select>
                 </label>
             </div>
@@ -21,6 +21,6 @@
           v: "3.53",
         });
     </script>
-    <script src="script.js"></script>
+    <script src="visualize.js"></script>
   </body>
 </html>
